--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@
     color: var(--accent-color);
     transition: 0.2s ease-out;
  }
+
+ .nav-toggle{
+    display: none;
+ }
  
 
 
@@ -153,7 +157,7 @@
  /* header section */
 
 header{
-        padding: 50px var(--padding-inline-section) 0;
+    padding: 50px var(--padding-inline-section) 0;
 }
 
 .header-section{
@@ -179,7 +183,7 @@ header{
 
 
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 
 .companies-header{
@@ -192,6 +196,7 @@ header{
 
 .logos{
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .logoo{
@@ -273,9 +278,17 @@ header{
     font-size: 2rem;
 }
 
+#big-feature-section2{
+    flex-direction: row-reverse;
+}
+
 
 
 /* example section */
+.example-section{
+    padding: 50px var(--padding-inline-section);
+}
+
 
 .example-header{
     text-align: center;
@@ -296,7 +309,7 @@ header{
 .examples-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background-color: black;
     background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)), url(./assets/asset\ example.jpg);
     background-size: cover;
